fix issue where ball is not centered at starting position

--- a/style.css
+++ b/style.css
@@ -86,5 +86,4 @@ body {
   background: var(--secondary-color);
   border-radius: 50%;
   position: absolute;
-  left: 50%;
 }
